// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applies plugins 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const color = 'red';

export default (() => <div className={'jsx-3382438999 ' + \`jsx-\${styles.__scopedHash}\`}>
    <p className={'jsx-3382438999 ' + \`jsx-\${styles.__scopedHash}\`}>test</p>
    <_JSXStyle styleId={\\"3382438999\\"} css={\`span.\${color}.jsx-3382438999{color:\${otherColor};}\`} />
    <_JSXStyle styleId={styles.__scopedHash} css={styles.__scoped} />
  </div>);"
`;

exports[`detects placeholders type 1`] = `
"\\"
// selector selector selector
%%styled-jsx-placeholder-SELECTOR-0%% %%styled-jsx-placeholder-SELECTOR-1%% %%styled-jsx-placeholder-SELECTOR-2%%,
div {
  // value
  display: %%styled-jsx-placeholder-VALUE-3%%;
  // value
  color: %%styled-jsx-placeholder-VALUE-4%%;
  // declaration
  %%styled-jsx-placeholder-DECLARATION-5%%;
  // declaration
  %%styled-jsx-placeholder-DECLARATION-6%%
  // declaration
  %%styled-jsx-placeholder-DECLARATION-7%%;
  background: red;
  // value
  animation: %%styled-jsx-placeholder-VALUE-8%% 10s ease-out;
  // value
  animation: foo %%styled-jsx-placeholder-VALUE-9%% ease-out;
  // value
  padding: 10px %%styled-jsx-placeholder-VALUE-10%%;
  // value value
  padding: %%styled-jsx-placeholder-VALUE-11%% %%styled-jsx-placeholder-VALUE-12%%;
  // value value value
  padding: %%styled-jsx-placeholder-VALUE-13%% %%styled-jsx-placeholder-VALUE-14%% %%styled-jsx-placeholder-VALUE-15%%;
}

div {
  color: red;
  // declaration
  %%styled-jsx-placeholder-DECLARATION-16%%
}

// media
@media (%%styled-jsx-placeholder-MEDIA-17%%) {

  // selector
  %%styled-jsx-placeholder-SELECTOR-18%%
  // selector
  span.%%styled-jsx-placeholder-SELECTOR-19%% {
    color: red;
  }

  // selector
  %%styled-jsx-placeholder-SELECTOR-20%%

  // selector
  %%styled-jsx-placeholder-SELECTOR-21%% {
    color: red;
  }

  // selector, selector
  %%styled-jsx-placeholder-SELECTOR-22%%, %%styled-jsx-placeholder-SELECTOR-23%% {
    color: red;
  }

  // selector
  %%styled-jsx-placeholder-SELECTOR-24%%
  // selector
  div, %%styled-jsx-placeholder-SELECTOR-25%% {
    color: red;
  }
}

div {
  // property
  %%styled-jsx-placeholder-PROPERTY-26%%: red;
}

// value
@media (min-width: %%styled-jsx-placeholder-VALUE-27%%) {
  // selector
  div.%%styled-jsx-placeholder-SELECTOR-28%% {
    color: red;
  }

  // selector
  all%%styled-jsx-placeholder-SELECTOR-29%% {
    // declaration
    %%styled-jsx-placeholder-DECLARATION-30%%
    color: red;
  }
}

@font-face {
  // declaration
  %%styled-jsx-placeholder-DECLARATION-31%%
}\\";"
`;

exports[`passes options to plugins 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const color = 'red';

export default (() => <div className={'jsx-3382438999 ' + \`jsx-\${styles.__scopedHash}\`}>
    <p className={'jsx-3382438999 ' + \`jsx-\${styles.__scopedHash}\`}>test</p>
    <_JSXStyle styleId={\\"3382438999\\"} css={\\".test.jsx-3382438999{content:\\\\\\"{\\\\\\"foo\\\\\\":false,\\\\\\"babel\\\\\\":{\\\\\\"location\\\\\\":{\\\\\\"start\\\\\\":{\\\\\\"line\\\\\\":7,\\\\\\"column\\\\\\":16},\\\\\\"end\\\\\\":{\\\\\\"line\\\\\\":11,\\\\\\"column\\\\\\":5}},\\\\\\"vendorPrefixes\\\\\\":false,\\\\\\"sourceMaps\\\\\\":false,\\\\\\"isGlobal\\\\\\":false}}\\\\\\";}\\"} />
    <_JSXStyle styleId={styles.__scopedHash} css={styles.__scoped} />
  </div>);"
`;
